# rust-boilerplate

./: .gitignore  Cargo.toml  README.md
src/: main.rs  printer.rs
task/: .gitignore  Cargo.toml
task/examples/basic/: main.rs
task/src/: lib.rs
task/tests/: task.rs
