[package]
name = "task"
version = "0.1.0"
edition = "2021"
description = "Library to define a generic thread-based task class"
homepage = "https://github.com/lecourtoisflo/rust-boilerplate"
repository = "https://github.com/lecourtoisflo/rust-boilerplate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "basic"
